Updated docker-compose for better compat

--- a/public/assets/css/app_1.css
+++ b/public/assets/css/app_1.css
@@ -11215,7 +11215,7 @@ h6 small,
 .card .card-header {
   position: relative;
   display: block;
-  padding: 26px 30px;
+  padding: 16px;
   border-radius: 2px 2px 0 0;
 }
 
