Appointments navigation centered

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -703,6 +703,8 @@ table.dataTable thead [class*="sorting"] {
 
 .h-inner {
     padding: 10px 10px;
+    display: flex;
+    justify-content: space-between;
 }
 .ha-menu {
     background: #2090ea;
