Better rending of calendar on mobile

--- a/public/assets/css/app_1.css
+++ b/public/assets/css/app_1.css
@@ -10407,7 +10407,7 @@ h6 small,
 
 .hi-menu > li {
     display: inline-block;
-    margin: 0 1px;
+    margin: 0;
     vertical-align: top;
     min-width: 50px;
 }
