--- a/public/assets/css/app_1.css
+++ b/public/assets/css/app_1.css
@@ -6626,7 +6626,7 @@ a.thumbnail.active {
 }
 
 .alert-success {
-    background-color: #4caf50;
+    background-color: #32c787;
     border-color: transparent;
     color: #fff;
 }
