--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -149,16 +149,20 @@ body.modal-open {
     padding: 15px 18px;
 }
 
-@media (max-width: 1025) {
+@media (max-width: 1025px) {
+    #main {
+        padding-top: 56px;
+    }
+
     .container,
     .container-fluid {
-        padding-left: 5px;
-        padding-right: 5px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 
     .row {
-        margin-left: -5px;
-        margin-right: -5px;
+        margin-left: -0px;
+        margin-right: -0px;
     }
 
     .col-lg-1,
@@ -209,8 +213,8 @@ body.modal-open {
     .col-xs-7,
     .col-xs-8,
     .col-xs-9 {
-        padding-left: 5px;
-        padding-right: 5px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 
     .table > thead > tr > th:first-child,
