--- a/public/assets/css/app_1.css
+++ b/public/assets/css/app_1.css
@@ -9683,6 +9683,86 @@ button.close {
     margin-right: 30px !important;
 }
 
+.m-35 {
+    margin: 35px !important;
+}
+
+.m-t-35 {
+    margin-top: 35px !important;
+}
+
+.m-b-35 {
+    margin-bottom: 35px !important;
+}
+
+.m-l-35 {
+    margin-left: 35px !important;
+}
+
+.m-r-35 {
+    margin-right: 35px !important;
+}
+
+.m-40 {
+    margin: 40px !important;
+}
+
+.m-t-40 {
+    margin-top: 40px !important;
+}
+
+.m-b-40 {
+    margin-bottom: 40px !important;
+}
+
+.m-l-40 {
+    margin-left: 40px !important;
+}
+
+.m-r-40 {
+    margin-right: 40px !important;
+}
+
+.m-45 {
+    margin: 45px !important;
+}
+
+.m-t-45 {
+    margin-top: 45px !important;
+}
+
+.m-b-45 {
+    margin-bottom: 45px !important;
+}
+
+.m-l-45 {
+    margin-left: 45px !important;
+}
+
+.m-r-45 {
+    margin-right: 45px !important;
+}
+
+.m-50 {
+    margin: 50px !important;
+}
+
+.m-t-50 {
+    margin-top: 50px !important;
+}
+
+.m-b-50 {
+    margin-bottom: 50px !important;
+}
+
+.m-l-50 {
+    margin-left: 50px !important;
+}
+
+.m-r-50 {
+    margin-right: 50px !important;
+}
+
 /*---------------------------------------------------------------------------
     Generate Padding Class
     padding, padding-top, padding-bottom, padding-left, padding-right
