--- a/public/assets/css/app_1.css
+++ b/public/assets/css/app_1.css
@@ -3312,12 +3312,12 @@ output {
 .form-control {
     display: block;
     width: 100%;
-    padding: 8px 12px;
+    padding: 8px 12px 7px;
     font-size: 15px;
     line-height: 1.42857143;
     color: #2e353b;
     background-color: #f2f2f2;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     border-radius: 4px;
     box-shadow: none !important;
     resize: none;
