--- a/public/assets/css/app_1.css
+++ b/public/assets/css/app_1.css
@@ -13230,6 +13230,7 @@ h6 small,
     color: #333;
     border-width: 1px;
     text-transform: uppercase;
+    font-size: 14px;
 }
 
 .table.table-inner {
