--- a/public/assets/css/app_2.css
+++ b/public/assets/css/app_2.css
@@ -1741,7 +1741,6 @@ html.ismobile .page-loader {
 
     .invoice {
         padding: 30px !important;
-        -webkit-print-color-adjust: exact !important;
     }
 
     .invoice .card-header {
@@ -2160,15 +2159,22 @@ table.dataTable.no-footer {
 .dataTables_filter input,
 .dataTables_length select,
 .dataTables_filter select {
-    border: 1px solid #eee;
-    height: 35px;
-    padding: 10px 15px;
-    font-size: 13px;
-    border-radius: 2px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    line-height: 100%;
-    background-color: #fff;
+    background-color: #f2f2f2;
+    border: 2px solid transparent;
+    padding: 8px 12px 7px;
+    line-height: 1.42857143;
+    font-size: 15px;
+    border-radius: 4px;
+    box-shadow: none !important;
+    resize: none;
+}
+
+.dataTables_length input:focus,
+.dataTables_filter input:focus,
+.dataTables_length select:focus,
+.dataTables_filter select:focus {
+    border-color: #32c787;
+    outline: 0;
 }
 
 .dataTables_length select {
@@ -2191,8 +2197,8 @@ table.dataTable.no-footer {
     font-family: "Material-Design-Iconic-Font";
     position: absolute;
     font-size: 18px;
-    right: 15px;
-    top: 5px;
+    right: 12px;
+    top: 8px;
 }
 
 .dataTables_filter label .form-control {
@@ -3259,7 +3265,7 @@ table.dataTable.no-footer {
     animation-timing-function: linear;
 }
 
-@-webkit-keyframes loader {
+@keyframes loader {
     0% {
         -webkit-transform: rotate(0deg);
         -ms-transform: rotate(0deg);
